--- a/BusinessSim/BusinessSim/MainWindow.xaml
+++ b/BusinessSim/BusinessSim/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:BusinessSim"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Background="darkGray">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
@@ -51,20 +51,20 @@
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
-            <TextBox x:Name="startOwners" Grid.Column="0" Grid.Row="0" IsReadOnly="False" TextAlignment="Center">5</TextBox>
-            <TextBox x:Name="startWorkers" Grid.Column="0" Grid.Row="1" IsReadOnly="False" TextAlignment="Center">18</TextBox>
-            <TextBox x:Name="startCoins" Grid.Column="0" Grid.Row="2" IsReadOnly="False" TextAlignment="Center">2</TextBox>
-            <TextBox x:Name="prodAm"  Grid.Column="0" Grid.Row="3" IsReadOnly="False" TextAlignment="Center">2</TextBox>
-            <TextBox x:Name="ownerNeeds" Grid.Column="0" Grid.Row="4" IsReadOnly="False" TextAlignment="Center">1</TextBox>
-            <TextBox x:Name="workersSalary" Grid.Column="0" Grid.Row="5" IsReadOnly="False" TextAlignment="Center">1</TextBox>
-            <TextBox x:Name="perCent" Grid.Column="0" Grid.Row="6" IsReadOnly="False" TextAlignment="Center">0</TextBox>
-            <CheckBox x:Name="ownerEatsAtWork" Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="3" VerticalAlignment="Center" Content="Собственник ест в рабочий день"/>
-            <CheckBox x:Name="ownersStartWithMoney" Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="3" VerticalAlignment="Center" Content="Владелец начинает без денег"/>
-            <Expander x:Name="selector" Header="Режим работы банка" Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="3" Grid.RowSpan="2">
+            <TextBox x:Name="startOwners" Grid.Column="0" Grid.Row="0" IsReadOnly="False" TextAlignment="Center" Background="LightGray">5</TextBox>
+            <TextBox x:Name="startWorkers" Grid.Column="0" Grid.Row="1" IsReadOnly="False" TextAlignment="Center" Background="LightGray">18</TextBox>
+            <TextBox x:Name="startCoins" Grid.Column="0" Grid.Row="2" IsReadOnly="False" TextAlignment="Center" Background="LightGray">2</TextBox>
+            <TextBox x:Name="prodAm"  Grid.Column="0" Grid.Row="3" IsReadOnly="False" TextAlignment="Center" Background="LightGray">2</TextBox>
+            <TextBox x:Name="ownerNeeds" Grid.Column="0" Grid.Row="4" IsReadOnly="False" TextAlignment="Center" Background="LightGray">1</TextBox>
+            <TextBox x:Name="workersSalary" Grid.Column="0" Grid.Row="5" IsReadOnly="False" TextAlignment="Center" Background="LightGray">1</TextBox>
+            <TextBox x:Name="perCent" Grid.Column="0" Grid.Row="6" IsReadOnly="False" TextAlignment="Center" Background="LightGray">0</TextBox>
+            <CheckBox x:Name="ownerEatsAtWork" Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="3" VerticalAlignment="Center" Content="Собственник ест в рабочий день" Background="LightGray"/>
+            <CheckBox x:Name="ownersStartWithMoney" Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="3" VerticalAlignment="Center" Content="Владелец начинает без денег" Background="LightGray"/>
+            <Expander x:Name="selector" Header="Режим работы банка" Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="3" Grid.RowSpan="2" Background="DarkGray">
                 <StackPanel>
-                    <RadioButton GroupName="BankRegime" Content="Банк не работает" Checked="Regime0"/>
-                    <RadioButton GroupName="BankRegime" Content="Банк даёт в долг последний" Checked="Regime1" IsChecked="True"/>
-                    <RadioButton GroupName="BankRegime" Content="Только банк даёт в долг" Checked="Regime2"/>
+                    <RadioButton GroupName="BankRegime" Content="Банк не работает" Checked="Regime0" Background="LightGray"/>
+                    <RadioButton GroupName="BankRegime" Content="Банк даёт в долг последний" Checked="Regime1" IsChecked="True" Background="LightGray"/>
+                    <RadioButton GroupName="BankRegime" Content="Только банк даёт в долг" Checked="Regime2" Background="LightGray"/>
                 </StackPanel>
             </Expander>
 
@@ -79,7 +79,7 @@
 
         <TextBlock Grid.Column="4" Grid.Row="0" Grid.ColumnSpan="2" TextWrapping="Wrap" TextAlignment="Center" FontSize="20" FontWeight="Bold">Текущее состояние</TextBlock>
         
-        <Grid x:Name="secondColumn" Grid.Column="3" Grid.Row="1" Grid.RowSpan="10" Grid.ColumnSpan="3" Background="LightGray" IsEnabled="False">
+        <Grid x:Name="secondColumn" Grid.Column="3" Grid.Row="1" Grid.RowSpan="10" Grid.ColumnSpan="3" Background="Gray" IsEnabled="False">
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
@@ -97,13 +97,13 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            
-            <TextBox x:Name="bankMoney" Grid.Column="0" Grid.Row="0" IsReadOnly="True" TextAlignment="Center"></TextBox>
-            <TextBox x:Name="ownersMoney" Grid.Column="0" Grid.Row="1" IsReadOnly="True" TextAlignment="Center"></TextBox>
-            <TextBox x:Name="sumDuty" Grid.Column="0" Grid.Row="2" IsReadOnly="True" TextAlignment="Center"></TextBox>
-            <TextBox x:Name="actWorkers" Grid.Column="0" Grid.Row="3" IsReadOnly="True" TextAlignment="Center"></TextBox>
-            <TextBox x:Name="actFirms" Grid.Column="0" Grid.Row="4" IsReadOnly="True" TextAlignment="Center"></TextBox>
-            <TextBox x:Name="sumProd" Grid.Column="0" Grid.Row="5" IsReadOnly="True" TextAlignment="Center"></TextBox>
+
+            <TextBox x:Name="bankMoney" Grid.Column="0" Grid.Row="0" IsReadOnly="True" TextAlignment="Center" Background="LightGray"></TextBox>
+            <TextBox x:Name="ownersMoney" Grid.Column="0" Grid.Row="1" IsReadOnly="True" TextAlignment="Center" Background="LightGray"></TextBox>
+            <TextBox x:Name="sumDuty" Grid.Column="0" Grid.Row="2" IsReadOnly="True" TextAlignment="Center" Background="LightGray"></TextBox>
+            <TextBox x:Name="actWorkers" Grid.Column="0" Grid.Row="3" IsReadOnly="True" TextAlignment="Center" Background="LightGray"></TextBox>
+            <TextBox x:Name="actFirms" Grid.Column="0" Grid.Row="4" IsReadOnly="True" TextAlignment="Center" Background="LightGray"></TextBox>
+            <TextBox x:Name="sumProd" Grid.Column="0" Grid.Row="5" IsReadOnly="True" TextAlignment="Center" Background="LightGray"></TextBox>
 
             <TextBlock Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" TextAlignment="Left" VerticalAlignment="Center">Количество монет у банка</TextBlock>
             <TextBlock Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" TextAlignment="Left" VerticalAlignment="Center">Суммарное количество монет у хозяев</TextBlock>
@@ -113,6 +113,6 @@
             <TextBlock Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2" TextAlignment="Left" VerticalAlignment="Center">Суммарное количество продукции</TextBlock>
         </Grid>
 
-        <Button x:Name="startButton" Grid.Column="5" Grid.Row="11" Content="Старт" Click="StartButton_Click"/>
+        <Button x:Name="startButton" Grid.Column="5" Grid.Row="11" Content="Старт" Click="StartButton_Click" Background="LightGray"/>
     </Grid>
 </Window>
